--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 
 header {
   background-color: #ffffff;
-  min-height: 900px;
+  height: 100vh;
 }
 header ul {
   display: -webkit-box;
@@ -41,6 +41,63 @@ header ul li {
 }
 header ul li:hover {
   color: #1d1e1f;
+}
+
+.main-nav-small {
+  display: none;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.nav-bar {
+  position: relative;
+  height: 20px;
+  width: 35px;
+}
+.nav-bar:hover span {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+.nav-bar span {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 3px;
+  background-color: #1d1d1d;
+  border-radius: 5%;
+  -webkit-box-shadow: 1px 1px 2px #1d1e1f;
+          box-shadow: 1px 1px 2px #1d1e1f;
+}
+.nav-bar span:first-child {
+  top: 0;
+  left: 0;
+}
+.nav-bar span:last-child {
+  bottom: 0;
+  left: 0;
+}
+.nav-bar span:nth-child(2) {
+  top: 8px;
+}
+
+.nav-bar_active span:first-child {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 6px;
+}
+.nav-bar_active span:last-child {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  bottom: 10px;
+}
+.nav-bar_active span:nth-child(2) {
+  -webkit-transform: translateX(-100px);
+  transform: translateX(-100px);
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 .header-info {
@@ -159,6 +216,14 @@ header ul li:hover {
   border: 5px solid #fefefe;
   border-radius: 50%;
   background-color: #1d1d1d;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.info-block_one:hover:before {
+  -webkit-transform: scale(1.5, 1.5);
+  transform: scale(1.5, 1.5);
+  background-color: #f06148;
 }
 
 .info-block_two {
@@ -176,6 +241,14 @@ header ul li:hover {
   border: 5px solid #fefefe;
   border-radius: 50%;
   background-color: #1d1d1d;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.info-block_two:hover:before {
+  -webkit-transform: scale(1.5, 1.5);
+  transform: scale(1.5, 1.5);
+  background-color: #f06148;
 }
 
 .our-team {
@@ -445,4 +518,55 @@ textarea {
   margin-bottom: 55px;
   font-size: 14px;
   color: #3b3b3b;
+}
+
+@media (min-width: 320px) and (max-width: 765px) {
+  header {
+    min-height: 800px;
+  }
+
+  .main-nav {
+    display: none;
+  }
+
+  .main-nav-small {
+    display: block;
+  }
+
+  .main-info:before {
+    display: none;
+  }
+
+  .info-block_one {
+    border-bottom: 1px solid #ffffff;
+  }
+
+  .info-block_one:before {
+    display: none;
+  }
+
+  .info-block_two {
+    padding-left: 0;
+    border-bottom: 1px solid #ffffff;
+  }
+
+  .info-block_two:before {
+    display: none;
+  }
+
+  .advantage_specs {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 25px;
+  }
+  .advantage_specs_cont {
+    padding-top: 20px;
+  }
+  .advantage_specs p {
+    display: none;
+  }
+
+  .copyright {
+    text-align: center;
+  }
 }
